feat: `/get_auth` docs: `/get_auth`
